--- a/app/templates/appbuilder/footer.html
+++ b/app/templates/appbuilder/footer.html
@@ -1,9 +1,10 @@
-<div class="row img-rounded">
-    <hr><small>
-<div class="col-md-4">
-</div>
-<div class="col-md-4">
-</div>
-<div class="col-md-4">
-</div>
-</div>
+<center>
+    <div class="osgs-footer p-2">
+        <div class="content has-text-centered">
+            <p>
+                <a href="https://github.com/kartoza/osgs"><strong>OSGS</strong></a> {{_('is built by')}}
+                <a href="https://www.kartoza.com/"><strong>Kartoza</strong></a>
+            </p>
+        </div>
+    </div>
+<center>
