--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,19 +3,19 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h1><center>{{_("OSGS")}}<center></h1>
+    <h1><center>{{_("OSGS SL")}}<center></h1>
 <pre>
                               (  ) (@@) ( )  (@)  ()    @@    O     @     O     @      O
                          (@@@)
                      (    )
                   (@@@@)
                 (   )
-                ++      +------ ____                 ____________________ ____________________
-                ||      |+-+ |  |   \@@@@@@@@@@@     |  ___ ___ ___ ___ | |  ___ ___ ___ ___ |
-              /---------|| | |  |    \@@@@@@@@@@@@@_ |  |_| |_| |_| |_| | |  |_| |_| |_| |_| |
-             + ========  +-+ |  |                  | |__________________| |__________________|
-            _|--O========O~\-+  |__________________| |__________________| |__________________|
-           //// \_/      \_/       (O)       (O)        (O)        (O)       (O)        (O)
+                ++      +------ ____                 ____________________ ____________________ ____________________
+                ||      |+-+ |  |   \@@@@@@@@@@@     |  ___ ___ ___ ___ | |  ___ ___ ___ ___ | |  ___ ___ ___ ___ |
+              /---------|| | |  |    \@@@@@@@@@@@@@_ |  |_| |_| |_| |_| | |  |_| |_| |_| |_| | |  |_| |_| |_| |_| |
+             + ========  +-+ |  |                  | |__________________| |__________________| |__________________|
+            _|--O========O~\-+  |__________________| |__________________| |__________________| |__________________|
+           //// \_/      \_/       (O)       (O)        (O)        (O)       (O)        (O)       (O)        (O)
 </pre>
     <h2><center>{{_('Welcome')}}<center></h2>
       <div class="well">
