--- a/app/templates/appbuilder/navbar_right.html
+++ b/app/templates/appbuilder/navbar_right.html
@@ -26,6 +26,8 @@
 {% endmacro %}
 
 
+<li><a href="/about">
+<i class="fa fa-fw fa-info-circle"></i>{{_("About")}}</a></li>
 
 {{ locale_menu(languages) }}
 {% if not current_user.is_anonymous %}
