--- a/app/templates/appbuilder/footer.html
+++ b/app/templates/appbuilder/footer.html
@@ -2,7 +2,7 @@
     <div class="osgs-footer p-2">
         <div class="content has-text-centered">
             <p>
-                <a href="https://github.com/kartoza/osgs"><strong>OSGS</strong></a> {{_('is built by')}}
+                <a href="https://github.com/kartoza/osgs"><strong>OSGS</strong></a> {{_("is built by")}}
                 <a href="https://www.kartoza.com/"><strong>Kartoza</strong></a>
             </p>
         </div>
