--- a/app/templates/make.html
+++ b/app/templates/make.html
@@ -1,30 +1,12 @@
 {% extends "appbuilder/base.html" %}
 {% block content %}
-<!-- Include Quill stylesheet -->
-<link href="https://cdn.quilljs.com/1.3.7/quill.snow.css" rel="stylesheet" />
-
-<!-- Create the editor container -->
-<div id="editor">
-    <!-- <h1>{{parameter}}</h1> -->
-    <h1>{{_("Let's get making already!!!")}}</h1>
-</div>
-
-<!-- Include the Quill library -->
-<script src="https://cdn.quilljs.com/1.3.7/quill.js"></script>
-
-<!-- Initialize Quill editor -->
-<script>
-  var editor = new Quill('#editor', {
-    modules: {
-        toolbar: [
-          [{ header: [1, 2, 3, 4, false] }],
-          ["bold", "italic", "underline", "striketrough", "code-block"],
-          [{ list: "ordered" }, { list: "bullet" }],
-          [{ align: [] }],
-          ["link", "image", "video", "code-block"]
-        ]
-      },
-      theme: "snow" // 'bubble'
-    });
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script type="text/javascript">
+  tinymce.init({
+    selector: '#editor'
+  });
 </script>
+
+<textarea id="editor">Hello, World!</textarea>
+
 {% endblock %}
