--- a/app/templates/wysiwyg.html
+++ b/app/templates/wysiwyg.html
@@ -1,11 +1,14 @@
 {% extends "appbuilder/base.html" %}
 {% block content %}
-<head>
-{{ pagedown.include_pagedown() }}
-</head>
-    <form method="POST">
-        {{ form.hidden_tag() }}
-        {{ form.pagedown(rows=10) }}
-        {{ form.submit }}
-    </form>
+<div id="editor">This is some sample content.</div>
+<script>
+        ClassicEditor
+                .create( document.querySelector( '#editor' ) )
+                .then( editor => {
+                        console.log( editor );
+                } )
+                .catch( error => {
+                        console.error( error );
+                } );
+</script>
 {% endblock %}
