cleanup center tags in templates

--- a/app/templates/appbuilder/footer.html
+++ b/app/templates/appbuilder/footer.html
@@ -1,10 +1,11 @@
 <center>
-    <div class="osgs-footer p-2">
-        <div class="content has-text-centered">
-            <p>
-                <a href="https://github.com/kartoza/osgs"><strong>OSGS</strong></a> {{_("is built by")}}
-                <a href="https://www.kartoza.com/"><strong>Kartoza</strong></a>
-            </p>
-        </div>
+  <div class="osgs-footer p-2">
+    <div class="content has-text-centered">
+      <p>
+        <a href="https://github.com/kartoza/osgs"><strong>OSGS</strong></a>
+        {{_("is built by")}}
+        <a href="https://www.kartoza.com/"><strong>Kartoza</strong></a>
+      </p>
     </div>
-<center>
+  </div>
+</center>
