--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,9 @@
-{% extends "appbuilder/base.html" %}
-{% block content %}
+{% extends "appbuilder/base.html" %} {% block content %}
 
 <div class="jumbotron">
   <div class="container">
-    <h1><center>{{_("OSGS SL")}}<center></h1>
-<pre>
+    <h1><center>{{_("OSGS SL")}}</center></h1>
+    <pre>
                               (  ) (@@) ( )  (@)  ()    @@    O     @     O     @      O
                          (@@@)
                      (    )
@@ -16,12 +15,10 @@
              + ========  +-+ |  |                  | |__________________| |__________________| |__________________|
             _|--O========O~\-+  |__________________| |__________________| |__________________| |__________________|
            //// \_/      \_/       (O)       (O)        (O)        (O)       (O)        (O)       (O)        (O)
-</pre>
-    <h2><center>{{_('Welcome')}}<center></h2>
-      <div class="well">
-      Go get creative!
-      </div>
+</pre
+    >
+    <h2><center>{{_('Welcome')}}</center></h2>
+    <div class="well">Go get creative!</div>
   </div>
 </div>
 {% endblock %}
-
