--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,7 +1,3 @@
-{% extends "appbuilder/base.html" %}
-
-{% block content %}
-<h2><center>{{_('Page not found')}}<center></h2>
+{% extends "appbuilder/base.html" %} {% block content %}
+<h2><center>{{_('Page not found')}}</center></h2>
 {% endblock %}
-
-
