--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,15 +1,15 @@
-{% extends "appbuilder/base.html" %}
-{% block content %}
+{% extends "appbuilder/base.html" %} {% block content %}
 <div class="jumbotron">
   <div class="container">
-    <center><h2><strong>{{_("About OSGS-SL")}}</strong></h2><center>
+    <center>
+      <h2><strong>{{_("About OSGS-SL")}}</strong></h2>
+    </center>
     <p class="well">
       This application is simply a user interface for
       <a href="https://github.com/kartoza/osgs">Open Source Geospatial Stack</a>
       operations.
     </p>
-    <p class="">Boom. It's comin.</p>
+    <p class="">Boom. It's a comin.</p>
   </div>
 </div>
 {% endblock %}
-
