--- a/app/templates/appbuilder/general/security/activation.html
+++ b/app/templates/appbuilder/general/security/activation.html
@@ -1,10 +1,8 @@
-{% extends "appbuilder/base.html" %}
-
-{% block content %}
+{% extends "appbuilder/base.html" %} {% block content %}
 <center>
-<h2>{{_('Welcome')}} {{first_name}} {{last_name}}</h2>
+  <h2>{{_('Welcome')}} {{first_name}} {{last_name}}</h2>
 
-<p>{{_('Your user is activated you can now proceed to login')}}</p>
-<center>
+  <p>{{_('Your user is activated you can now proceed to login')}}</p>
+</center>
 
 {% endblock %}
