--- a/app/templates/appbuilder/index.html
+++ b/app/templates/appbuilder/index.html
@@ -1,11 +1,5 @@
-{% extends "appbuilder/base.html" %}
+{% extends "appbuilder/base.html" %} {% block content %}
+<h2><center>{{_('Welcome')}}</center></h2>
 
-{% block content %}
-<h2><center>{{_('Welcome')}}<center></h2>
-
-<div class="well">
-
-</div>
+<div class="well"></div>
 {% endblock %}
-
-
