add wysiwyg with ckeditor
this should have been death by 100 commits
not splitting this up was a mistake, but we're here now,
and lot's of complexity is handled in vanilla bootstrap forms.
needs to migrate to WTForms and integrate with
app, as well as stack.
But it's there now at least!

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -16,3 +16,18 @@
   bottom: 0;
   width: 100%;
 }
+
+.editor-sm-body .ck-placeholder,
+.editor-sm-body .ck-editor__editable_inline {
+  min-height: 15px;
+}
+
+.editor-md-body .ck-placeholder,
+.editor-md-body .ck-editor__editable_inline {
+  min-height: 200px;
+}
+
+.editor-lg-body .ck-placeholder,
+.editor-lg-body .ck-editor__editable_inline {
+  min-height: 600px;
+}
