add name to navbar

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,7 +9,7 @@
       <a href="https://github.com/kartoza/osgs">Open Source Geospatial Stack</a>
       operations.
     </p>
-    <p class="">Boom. It's a comin.</p>
+    <p class="well">Boom. It's a comin.</p>
   </div>
 </div>
 {% endblock %}
