--- a/app/templates/appbuilder/navbar_menu.html
+++ b/app/templates/appbuilder/navbar_menu.html
@@ -1,38 +1,43 @@
 {% macro menu_item(item) %}
-    <a tabindex="-1" href="{{item.get_url()}}">
-       {% if item.icon %}
-        <i class="fa fa-fw {{item.icon}}"></i>&nbsp;
-    {% endif %}
-    {{_(item.label)}}</a>
-{% endmacro %}
+<a tabindex="-1" href="{{item.get_url()}}">
+  {% if item.icon %}
+  <i class="fa fa-fw {{item.icon}}"></i>&nbsp; {% endif %} {{_(item.label)}}</a
+>
+{% endmacro %} {% for item1 in menu.get_list() %} {% if item1 | is_menu_visible
+%} {% if item1.childs %}
+<li class="dropdown">
+  <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
+    {% if item1.icon %}
+    <i class="fa {{item1.icon}}"></i>&nbsp; {% endif %} {{_(item1.label)}}<b
+      class="caret"
+    ></b
+  ></a>
+  <ul class="dropdown-menu">
+    {% for item2 in item1.childs %} {% if item2 %} {% if item2.name == '-' %} {%
+    if not loop.last %}
+    <li class="divider"></li>
+    {% endif %} {% elif item2 | is_menu_visible %}
+    <li>{{ menu_item(item2) }}</li>
+    {% endif %} {% endif %} {% endfor %}
+  </ul>
+</li>
+{% else %}
+<li>{{ menu_item(item1) }}</li>
+{% endif %} {% endif %} {% endfor %}
 
-
-{% for item1 in menu.get_list() %}
-    {% if item1 | is_menu_visible %}
-        {% if item1.childs %}
-            <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
-            {% if item1.icon %}
-                <i class="fa {{item1.icon}}"></i>&nbsp;
-            {% endif %}
-            {{_(item1.label)}}<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-            {% for item2 in item1.childs %}
-                {% if item2 %}
-                    {% if item2.name == '-' %}
-                        {% if not loop.last %}
-                          <li class="divider"></li>
-                        {% endif %}
-                    {% elif item2 | is_menu_visible %}
-                        <li>{{ menu_item(item2) }}</li>
-                    {% endif %}
-                {% endif %}
-            {% endfor %}
-            </ul></li>
-        {% else %}
-            <li>
-                {{ menu_item(item1) }}
-            </li>
-        {% endif %}
-    {% endif %}
-{% endfor %}
+<li class="dropdown">
+  <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
+    <i class="fa fa-link"></i>&nbsp; {{_("Services")}}<b class="caret"></b
+  ></a>
+  <ul class="dropdown-menu">
+    {% set links = { "Home":"https://osgs.kartoza.com", "-":"", "Maps":"#",
+    "Links icon":"#", "File Browser":"#", "Geoserver":"#", "Jupyter
+    Notebook":"#", "Mapproxy":"#", "Metabase":"#", "Node Red":"#",
+    "Postgrest":"#", "Swagger":"#", "Twitter":"#", } %} {% for key, value in
+    links.items() %}{% if key == '-' %}
+    <li class="divider"></li>
+    {% else %}
+    <li><a href="{{ value }}">{{ key }}</a></li>
+    {% endif %}{% endfor %}
+  </ul>
+</li>
