add more quick actions

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,12 +19,12 @@
     >
     <h2><center>{{_('Quick Actions')}}</center></h2>
     <div class="container">
-      <div class="row">
+      <div class="row" style="padding-top: 2rem">
         <div class="col-md-3">
           <a
             class="btn btn-primary btn-block"
             style="padding: 2rem"
-            href="#"
+            href="/pages/create/map"
             role="button"
           >
             <div class="row">
@@ -77,6 +77,68 @@
             </div>
             <div class="row">
               <span>Add Blueprint</span>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="row" style="padding-top: 2rem">
+        <div class="col-md-3">
+          <a
+            class="btn btn-default btn-block"
+            style="padding: 2rem"
+            href="#"
+            role="button"
+          >
+            <div class="row">
+              <i class="fa fa-lg fa-dashboard" style="padding-bottom: 1rem"></i>
+            </div>
+            <div class="row">
+              <span>Import a dashboard</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a
+            class="btn btn-primary btn-block"
+            style="padding: 2rem"
+            href="https://docs-v8.terria.io/guide/customizing/client-side-config/"
+            role="button"
+          >
+            <div class="row">
+              <i class="fa fa-lg fa-globe" style="padding-bottom: 1rem"></i>
+            </div>
+            <div class="row">
+              <span>Create a webmap project</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a
+            class="btn btn-default btn-block"
+            style="padding: 2rem"
+            href="https://turfjs.org/"
+            role="button"
+          >
+            <div class="row">
+              <i class="fa fa-lg fa-magic" style="padding-bottom: 1rem"></i>
+            </div>
+            <div class="row">
+              <span>Create new data</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a
+            class="btn btn-primary btn-block"
+            style="padding: 2rem"
+            href="https://pelias.io/"
+            role="button"
+          >
+            <div class="row">
+              <i class="fa fa-lg fa-search" style="padding-bottom: 1rem"></i>
+            </div>
+            <div class="row">
+              <span>Search location data</span>
             </div>
           </a>
         </div>
