restyle responsive quick action buttons

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "appbuilder/base.html" %} {% block content %}
 
 <div class="jumbotron">
-  <div class="container well">
-    <h1><center>{{_("OSGS SL")}}</center></h1>
+  <div class="container" style="margin-top: -3rem">
+    <h2><center>{{_("OSGS SL")}}</center></h2>
     <pre>
                               (  ) (@@) ( )  (@)  ()    @@    O     @     O     @      O
                          (@@@)
@@ -17,10 +17,10 @@
            //// \_/      \_/       (O)       (O)        (O)        (O)       (O)        (O)       (O)        (O)
 </pre
     >
-    <h2><center>{{_('Quick Actions')}}</center></h2>
+    <h3><center>{{_('Quick Actions')}}</center></h3>
     <div class="container">
-      <div class="row" style="padding-top: 2rem">
-        <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-primary btn-block"
             style="padding: 2rem"
@@ -35,7 +35,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-default btn-block"
             style="padding: 2rem"
@@ -50,7 +50,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-primary btn-block"
             style="padding: 2rem"
@@ -65,7 +65,7 @@
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-default btn-block"
             style="padding: 2rem"
@@ -76,13 +76,13 @@
               <i class="fa fa-lg fa-rocket" style="padding-bottom: 1rem"></i>
             </div>
             <div class="row">
-              <span>Add Blueprint</span>
+              <span>Deploy Blueprint</span>
             </div>
           </a>
         </div>
       </div>
-      <div class="row" style="padding-top: 2rem">
-        <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-default btn-block"
             style="padding: 2rem"
@@ -93,11 +93,11 @@
               <i class="fa fa-lg fa-dashboard" style="padding-bottom: 1rem"></i>
             </div>
             <div class="row">
-              <span>Import a dashboard</span>
+              <span>Import dashboards</span>
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-primary btn-block"
             style="padding: 2rem"
@@ -108,11 +108,11 @@
               <i class="fa fa-lg fa-globe" style="padding-bottom: 1rem"></i>
             </div>
             <div class="row">
-              <span>Create a webmap project</span>
+              <span>Create webmap project</span>
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-default btn-block"
             style="padding: 2rem"
@@ -123,11 +123,11 @@
               <i class="fa fa-lg fa-magic" style="padding-bottom: 1rem"></i>
             </div>
             <div class="row">
-              <span>Create new data</span>
+              <span>Create data</span>
             </div>
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-top: 2rem">
           <a
             class="btn btn-primary btn-block"
             style="padding: 2rem"
