add basic posts structure

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -3,13 +3,15 @@
   <div class="container">
     <center>
       <h2><strong>{{_("About OSGS-SL")}}</strong></h2>
+      <p>
+        This application is simply a user interface for
+        <a href="https://github.com/kartoza/osgs"
+          >Open Source Geospatial Stack</a
+        >
+        operations.
+      </p>
+      <p>Boom. It's a comin.</p>
     </center>
-    <p class="well">
-      This application is simply a user interface for
-      <a href="https://github.com/kartoza/osgs">Open Source Geospatial Stack</a>
-      operations.
-    </p>
-    <p class="well">Boom. It's a comin.</p>
   </div>
 </div>
 {% endblock %}
