--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
           <a
             class="btn btn-primary btn-block"
             style="padding: 2rem"
-            href="/pages/create/map"
+            href="/posts/create/map"
             role="button"
           >
             <div class="row">
@@ -39,7 +39,7 @@
           <a
             class="btn btn-default btn-block"
             style="padding: 2rem"
-            href="#"
+            href="/posts/create/post"
             role="button"
           >
             <div class="row">
